# miniglog

./: README.md
example/test/: CMakeLists.txt  test.cpp
glog/: logging.h
